deploy: 56a9e174306ebe33516c751e824692e4ac0c270c

--- a/genindex.html
+++ b/genindex.html
@@ -363,6 +363,7 @@
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#O"><strong>O</strong></a>
+ | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
@@ -381,6 +382,8 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/plots.html#plots.calculate_rank">calculate_rank() (in module plots)</a>
+</li>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.check_trailing_record_length">check_trailing_record_length() (obs_sequence.obs_sequence static method)</a>
 </li>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.collect_copie_names">collect_copie_names() (obs_sequence.obs_sequence static method)</a>
@@ -447,11 +450,15 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/plots.html#plots.mean_then_sqrt">mean_then_sqrt() (in module plots)</a>
+</li>
       <li>
     module
 
       <ul>
         <li><a href="api/obs_sequence.html#module-obs_sequence">obs_sequence</a>
+</li>
+        <li><a href="api/plots.html#module-0">plots</a>
 </li>
       </ul></li>
   </ul></td>
@@ -480,16 +487,41 @@
   </ul></td>
 </tr></table>
 
+<h2 id="P">P</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/plots.html#plots.plot_profile">plot_profile() (in module plots)</a>
+</li>
+      <li><a href="api/plots.html#plots.plot_profile_prior">plot_profile_prior() (in module plots)</a>
+</li>
+      <li><a href="api/plots.html#plots.plot_profile_prior_post">plot_profile_prior_post() (in module plots)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/plots.html#plots.plot_rank_histogram">plot_rank_histogram() (in module plots)</a>
+</li>
+      <li>
+    plots
+
+      <ul>
+        <li><a href="api/plots.html#module-0">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.read_binary_header">read_binary_header() (obs_sequence.obs_sequence static method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.read_header">read_header() (obs_sequence.obs_sequence static method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.read_record_length">read_record_length() (obs_sequence.obs_sequence static method)</a>
+</li>
+      <li><a href="api/plots.html#plots.rmse_bias_by_obs_type">rmse_bias_by_obs_type() (in module plots)</a>
 </li>
   </ul></td>
 </tr></table>
