deploy: e61428774fbf6ad6e65c0d39b95f66b64d829a78

--- a/genindex.html
+++ b/genindex.html
@@ -138,7 +138,7 @@
 
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="devel/index.html">
-    Developer’s Guide
+    Developer Guide
   </a>
 </li>
 
@@ -259,7 +259,7 @@
 
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="devel/index.html">
-    Developer’s Guide
+    Developer Guide
   </a>
 </li>
 
