--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="devel/index.html">
-    Developer’s Guide
+    Developer Guide
   </a>
 </li>
 
@@ -265,7 +265,7 @@
 
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="devel/index.html">
-    Developer’s Guide
+    Developer Guide
   </a>
 </li>
 
@@ -399,7 +399,7 @@ every function and class within pyDARTdiags.</p>
 <p class="sd-card-text"><strong>Developer’s Guide</strong></p>
 <p class="sd-card-text">Want to help make pyDARTdiags better? Contributions are welcome!</p>
 </div>
-<a class="sd-stretched-link sd-hide-link-text reference internal" href="devel/index.html"><span class="doc">Developer’s Guide</span></a></div>
+<a class="sd-stretched-link sd-hide-link-text reference internal" href="devel/index.html"><span class="doc">Developer Guide</span></a></div>
 </div>
 <div class="sd-col sd-d-flex-row docutils">
 <div class="sd-card sd-sphinx-override sd-w-100 sd-shadow-sm sd-card-hover sd-text-center docutils">
