--- a/py-modindex.html
+++ b/py-modindex.html
@@ -145,7 +145,7 @@
 
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="devel/index.html">
-    Developer’s Guide
+    Developer Guide
   </a>
 </li>
 
@@ -266,7 +266,7 @@
 
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="devel/index.html">
-    Developer’s Guide
+    Developer Guide
   </a>
 </li>
 
