--- a/search.html
+++ b/search.html
@@ -140,7 +140,7 @@
 
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="devel/index.html">
-    Developer’s Guide
+    Developer Guide
   </a>
 </li>
 
@@ -261,7 +261,7 @@
 
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="devel/index.html">
-    Developer’s Guide
+    Developer Guide
   </a>
 </li>
 
