--- a/userguide/installguide.html
+++ b/userguide/installguide.html
@@ -49,7 +49,7 @@
     <script>DOCUMENTATION_OPTIONS.pagename = 'userguide/installguide';</script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Developer’s Guide" href="../devel/index.html" />
+    <link rel="next" title="Developer Guide" href="../devel/index.html" />
     <link rel="prev" title="User Guide" href="index.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
@@ -141,7 +141,7 @@
 
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="../devel/index.html">
-    Developer’s Guide
+    Developer Guide
   </a>
 </li>
 
@@ -264,7 +264,7 @@
 
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="../devel/index.html">
-    Developer’s Guide
+    Developer Guide
   </a>
 </li>
 
@@ -434,7 +434,7 @@ pip install pydartdiags
        title="next page">
       <div class="prev-next-info">
         <p class="prev-next-subtitle">next</p>
-        <p class="prev-next-title">Developer’s Guide</p>
+        <p class="prev-next-title">Developer Guide</p>
       </div>
       <i class="fa-solid fa-angle-right"></i>
     </a>
