deploy: b021ec8987195952967269a8a474cfbd46e74e42

--- a/devel/index.html
+++ b/devel/index.html
@@ -50,7 +50,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Contributors Guide" href="CONTRIBUTING.html" />
-    <link rel="prev" title="Install Guide" href="../userguide/installguide.html" />
+    <link rel="prev" title="Working with obs_sequence objects" href="../userguide/working-with-obsq.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
   <meta name="docsearch:version" content="" />
@@ -475,12 +475,12 @@ To install pytest-cov, run the following command:</p>
                   
 <div class="prev-next-area">
     <a class="left-prev"
-       href="../userguide/installguide.html"
+       href="../userguide/working-with-obsq.html"
        title="previous page">
       <i class="fa-solid fa-angle-left"></i>
       <div class="prev-next-info">
         <p class="prev-next-subtitle">previous</p>
-        <p class="prev-next-title">Install Guide</p>
+        <p class="prev-next-title">Working with obs_sequence objects</p>
       </div>
     </a>
     <a class="right-next"
