--- a/genindex.html
+++ b/genindex.html
@@ -366,6 +366,7 @@
  | <a href="#N"><strong>N</strong></a>
  | <a href="#O"><strong>O</strong></a>
  | <a href="#P"><strong>P</strong></a>
+ | <a href="#Q"><strong>Q</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
@@ -430,6 +431,12 @@
 <h2 id="H">H</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.has_assimilation_info">has_assimilation_info (obs_sequence.obs_sequence attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.has_posterior">has_posterior (obs_sequence.obs_sequence attribute)</a>
+</li>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.header">header (obs_sequence.obs_sequence attribute)</a>
 </li>
   </ul></td>
@@ -460,6 +467,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/obs_sequence.html#obs_sequence.load_yaml_to_dict">load_yaml_to_dict() (in module obs_sequence)</a>
 </li>
+      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.loc_mod">loc_mod (obs_sequence.obs_sequence attribute)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -483,6 +492,16 @@
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.n_copies">n_copies (obs_sequence.obs_sequence attribute)</a>
+</li>
+      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.n_non_qc">n_non_qc (obs_sequence.obs_sequence attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.n_qc">n_qc (obs_sequence.obs_sequence attribute)</a>
+</li>
+      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.non_qc_copie_names">non_qc_copie_names (obs_sequence.obs_sequence attribute)</a>
+</li>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.num_qc_non_qc">num_qc_non_qc() (obs_sequence.obs_sequence static method)</a>
 </li>
   </ul></td>
@@ -534,6 +553,14 @@
   </ul></td>
 </tr></table>
 
+<h2 id="Q">Q</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.qc_copie_names">qc_copie_names (obs_sequence.obs_sequence attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -545,6 +572,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.read_record_length">read_record_length() (obs_sequence.obs_sequence static method)</a>
 </li>
+      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.reverse_types">reverse_types (obs_sequence.obs_sequence attribute)</a>
+</li>
       <li><a href="api/plots.html#plots.rmse_bias_by_obs_type">rmse_bias_by_obs_type() (in module plots)</a>
 </li>
   </ul></td>
@@ -553,7 +582,13 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.seq">seq (obs_sequence.obs_sequence attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.split_metadata">split_metadata() (obs_sequence.obs_sequence static method)</a>
+</li>
+      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.synonyms_for_obs">synonyms_for_obs (obs_sequence.obs_sequence attribute)</a>
 </li>
   </ul></td>
 </tr></table>
