deploy: 15231eeddbb82ae96fdec119053f9f442907f47d

--- a/genindex.html
+++ b/genindex.html
@@ -355,6 +355,7 @@
 
 <div class="genindex-jumpbox">
  <a href="#A"><strong>A</strong></a>
+ | <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
  | <a href="#G"><strong>G</strong></a>
@@ -379,13 +380,29 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.all_obs">all_obs (obs_sequence.obs_sequence attribute)</a>
 </li>
+      <li><a href="api/stats.html#stats.apply_to_phases_by_obs">apply_to_phases_by_obs() (in module stats)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/stats.html#stats.apply_to_phases_by_type_return_df">apply_to_phases_by_type_return_df() (in module stats)</a>
+</li>
+      <li><a href="api/stats.html#stats.apply_to_phases_in_place">apply_to_phases_in_place() (in module stats)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="B">B</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/stats.html#stats.bin_by_layer">bin_by_layer() (in module stats)</a>
+</li>
   </ul></td>
 </tr></table>
 
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/plots.html#plots.calculate_rank">calculate_rank() (in module plots)</a>
+      <li><a href="api/stats.html#stats.calculate_rank">calculate_rank() (in module stats)</a>
 </li>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.check_trailing_record_length">check_trailing_record_length() (obs_sequence.obs_sequence static method)</a>
 </li>
@@ -416,6 +433,10 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.df">df (obs_sequence.obs_sequence attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/stats.html#stats.diag_stats">diag_stats() (in module stats)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -475,7 +496,7 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/plots.html#plots.mean_then_sqrt">mean_then_sqrt() (in module plots)</a>
+      <li><a href="api/stats.html#stats.mean_then_sqrt">mean_then_sqrt() (in module stats)</a>
 </li>
       <li>
     module
@@ -484,6 +505,8 @@
         <li><a href="api/obs_sequence.html#module-obs_sequence">obs_sequence</a>
 </li>
         <li><a href="api/plots.html#module-0">plots</a>
+</li>
+        <li><a href="api/stats.html#module-0">stats</a>
 </li>
       </ul></li>
   </ul></td>
@@ -539,10 +562,10 @@
 </li>
       <li><a href="api/plots.html#plots.plot_profile_prior_post">plot_profile_prior_post() (in module plots)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/plots.html#plots.plot_rank_histogram">plot_rank_histogram() (in module plots)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     plots
 
@@ -550,6 +573,10 @@
         <li><a href="api/plots.html#module-0">module</a>
 </li>
       </ul></li>
+      <li><a href="api/stats.html#stats.possible_vs_used">possible_vs_used() (in module stats)</a>
+</li>
+      <li><a href="api/stats.html#stats.possible_vs_used_by_layer">possible_vs_used_by_layer() (in module stats)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -574,20 +601,27 @@
 </li>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.reverse_types">reverse_types (obs_sequence.obs_sequence attribute)</a>
 </li>
-      <li><a href="api/plots.html#plots.rmse_bias_by_obs_type">rmse_bias_by_obs_type() (in module plots)</a>
-</li>
   </ul></td>
 </tr></table>
 
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/stats.html#stats.select_failed_qcs">select_failed_qcs() (in module stats)</a>
+</li>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.seq">seq (obs_sequence.obs_sequence attribute)</a>
+</li>
+      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.split_metadata">split_metadata() (obs_sequence.obs_sequence static method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.split_metadata">split_metadata() (obs_sequence.obs_sequence static method)</a>
+      <li>
+    stats
+
+      <ul>
+        <li><a href="api/stats.html#module-0">module</a>
 </li>
+      </ul></li>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.synonyms_for_obs">synonyms_for_obs (obs_sequence.obs_sequence attribute)</a>
 </li>
   </ul></td>
