deploy: 4dc20526da7eded7d01493ed2cd6f09396df81cd

--- a/genindex.html
+++ b/genindex.html
@@ -508,6 +508,8 @@
       <ul>
         <li><a href="api/obs_sequence.html#module-obs_sequence">obs_sequence</a>
 </li>
+        <li><a href="api/plots.html#module-0">plots</a>
+</li>
         <li><a href="api/stats.html#module-0">stats</a>
 </li>
       </ul></li>
@@ -558,10 +560,25 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/stats.html#stats.possible_vs_used">possible_vs_used() (in module stats)</a>
+      <li><a href="api/plots.html#plots.plot_profile">plot_profile() (in module plots)</a>
+</li>
+      <li><a href="api/plots.html#plots.plot_profile_prior">plot_profile_prior() (in module plots)</a>
+</li>
+      <li><a href="api/plots.html#plots.plot_profile_prior_post">plot_profile_prior_post() (in module plots)</a>
+</li>
+      <li><a href="api/plots.html#plots.plot_rank_histogram">plot_rank_histogram() (in module plots)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    plots
+
+      <ul>
+        <li><a href="api/plots.html#module-0">module</a>
+</li>
+      </ul></li>
+      <li><a href="api/stats.html#stats.possible_vs_used">possible_vs_used() (in module stats)</a>
+</li>
       <li><a href="api/stats.html#stats.possible_vs_used_by_layer">possible_vs_used_by_layer() (in module stats)</a>
 </li>
   </ul></td>
