deploy: e963dec0b559f55f3474c8fb4510182baaee38f7

--- a/genindex.html
+++ b/genindex.html
@@ -500,12 +500,21 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    matplots
+
+      <ul>
+        <li><a href="api/matplots.html#module-0">module</a>
+</li>
+      </ul></li>
       <li><a href="api/stats.html#stats.mean_then_sqrt">mean_then_sqrt() (in module stats)</a>
 </li>
       <li>
     module
 
       <ul>
+        <li><a href="api/matplots.html#module-0">matplots</a>
+</li>
         <li><a href="api/obs_sequence.html#module-obs_sequence">obs_sequence</a>
 </li>
         <li><a href="api/plots.html#module-0">plots</a>
@@ -560,16 +569,20 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/plots.html#plots.plot_profile">plot_profile() (in module plots)</a>
+      <li><a href="api/matplots.html#matplots.plot_profile">plot_profile() (in module matplots)</a>
+
+      <ul>
+        <li><a href="api/plots.html#plots.plot_profile">(in module plots)</a>
 </li>
+      </ul></li>
       <li><a href="api/plots.html#plots.plot_profile_prior">plot_profile_prior() (in module plots)</a>
 </li>
       <li><a href="api/plots.html#plots.plot_profile_prior_post">plot_profile_prior_post() (in module plots)</a>
 </li>
-      <li><a href="api/plots.html#plots.plot_rank_histogram">plot_rank_histogram() (in module plots)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/plots.html#plots.plot_rank_histogram">plot_rank_histogram() (in module plots)</a>
+</li>
       <li>
     plots
 
