--- a/genindex.html
+++ b/genindex.html
@@ -456,11 +456,11 @@
 <h2 id="H">H</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.has_assimilation_info">has_assimilation_info (obs_sequence.obs_sequence attribute)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.has_assimilation_info">has_assimilation_info() (obs_sequence.obs_sequence method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.has_posterior">has_posterior (obs_sequence.obs_sequence attribute)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.has_posterior">has_posterior() (obs_sequence.obs_sequence method)</a>
 </li>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.header">header (obs_sequence.obs_sequence attribute)</a>
 </li>
