deploy: 3d567f81739cdca6e1c0de1f31c9a50eae31c389

--- a/genindex.html
+++ b/genindex.html
@@ -624,7 +624,7 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/stats.html#stats.select_failed_qcs">select_failed_qcs() (in module stats)</a>
+      <li><a href="api/stats.html#stats.select_used_qcs">select_used_qcs() (in module stats)</a>
 </li>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.seq">seq (obs_sequence.obs_sequence attribute)</a>
 </li>
