deploy: 67f9341532a045d8073e2411bee897ae5b2e24af

--- a/genindex.html
+++ b/genindex.html
@@ -416,10 +416,10 @@
 </li>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.column_headers">column_headers() (obs_sequence.obs_sequence method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.composite_types">composite_types() (obs_sequence.obs_sequence method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/obs_sequence.html#obs_sequence.construct_composit">construct_composit() (in module obs_sequence)</a>
 </li>
       <li><a href="api/obs_sequence.html#obs_sequence.convert_dart_time">convert_dart_time() (in module obs_sequence)</a>
@@ -429,6 +429,8 @@
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.create_all_obs">create_all_obs() (obs_sequence.obs_sequence method)</a>
 </li>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.create_header">create_header() (obs_sequence.obs_sequence method)</a>
+</li>
+      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.create_header_from_dataframe">create_header_from_dataframe() (obs_sequence.obs_sequence method)</a>
 </li>
   </ul></td>
 </tr></table>
