deploy: fd82d187859108432135f09d0ba4b31b8c067762

--- a/genindex.html
+++ b/genindex.html
@@ -375,6 +375,7 @@
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
+ | <a href="#U"><strong>U</strong></a>
  | <a href="#V"><strong>V</strong></a>
  | <a href="#W"><strong>W</strong></a>
  
@@ -650,6 +651,14 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.types">types (obs_sequence.obs_sequence attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="U">U</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.update_types_dicts">update_types_dicts() (obs_sequence.obs_sequence static method)</a>
 </li>
   </ul></td>
 </tr></table>
