deploy: 9992aab29886e43220fd54e9a41ece5038e04b10

--- a/genindex.html
+++ b/genindex.html
@@ -402,6 +402,10 @@
       <li><a href="api/stats.html#stats.bin_by_layer">bin_by_layer() (in module stats)</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/stats.html#stats.bin_by_time">bin_by_time() (in module stats)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="C">C</h2>
@@ -572,6 +576,8 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/matplots.html#matplots.plot_evolution">plot_evolution() (in module matplots)</a>
+</li>
       <li><a href="api/matplots.html#matplots.plot_profile">plot_profile() (in module matplots)</a>
 
       <ul>
@@ -582,9 +588,11 @@
 </li>
       <li><a href="api/plots.html#plots.plot_profile_prior_post">plot_profile_prior_post() (in module plots)</a>
 </li>
+      <li><a href="api/plots.html#plots.plot_rank_histogram">plot_rank_histogram() (in module plots)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/plots.html#plots.plot_rank_histogram">plot_rank_histogram() (in module plots)</a>
+      <li><a href="api/matplots.html#matplots.plot_time_evolution">plot_time_evolution() (in module matplots)</a>
 </li>
       <li>
     plots
@@ -596,6 +604,8 @@
       <li><a href="api/stats.html#stats.possible_vs_used">possible_vs_used() (in module stats)</a>
 </li>
       <li><a href="api/stats.html#stats.possible_vs_used_by_layer">possible_vs_used_by_layer() (in module stats)</a>
+</li>
+      <li><a href="api/stats.html#stats.possible_vs_used_by_time">possible_vs_used_by_time() (in module stats)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -649,6 +659,10 @@
 
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/stats.html#stats.time_statistics">time_statistics() (in module stats)</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.types">types (obs_sequence.obs_sequence attribute)</a>
 </li>
