--- a/genindex.html
+++ b/genindex.html
@@ -458,6 +458,10 @@
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.generate_linked_list_pattern">generate_linked_list_pattern() (obs_sequence.obs_sequence static method)</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/stats.html#stats.grand_statistics">grand_statistics() (in module stats)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="H">H</h2>
@@ -493,6 +497,8 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/stats.html#stats.layer_statistics">layer_statistics() (in module stats)</a>
+</li>
       <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.list_to_obs">list_to_obs() (obs_sequence.obs_sequence method)</a>
 </li>
   </ul></td>
