--- a/genindex.html
+++ b/genindex.html
@@ -383,7 +383,7 @@
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.all_obs">all_obs (obs_sequence.obs_sequence attribute)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.all_obs">all_obs (obs_sequence.ObsSequence attribute)</a>
 </li>
       <li><a href="api/stats.html#stats.apply_to_phases_by_obs">apply_to_phases_by_obs() (in module stats)</a>
 </li>
@@ -413,15 +413,15 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/stats.html#stats.calculate_rank">calculate_rank() (in module stats)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.check_trailing_record_length">check_trailing_record_length() (obs_sequence.obs_sequence static method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.check_trailing_record_length">check_trailing_record_length() (obs_sequence.ObsSequence static method)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.collect_copie_names">collect_copie_names() (obs_sequence.obs_sequence static method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.collect_copie_names">collect_copie_names() (obs_sequence.ObsSequence static method)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.collect_obs_types">collect_obs_types() (obs_sequence.obs_sequence static method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.collect_obs_types">collect_obs_types() (obs_sequence.ObsSequence static method)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.column_headers">column_headers() (obs_sequence.obs_sequence method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.column_headers">column_headers() (obs_sequence.ObsSequence method)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.composite_types">composite_types() (obs_sequence.obs_sequence method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.composite_types">composite_types() (obs_sequence.ObsSequence method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -429,13 +429,13 @@
 </li>
       <li><a href="api/obs_sequence.html#obs_sequence.convert_dart_time">convert_dart_time() (in module obs_sequence)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.copie_names">copie_names (obs_sequence.obs_sequence attribute)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.copie_names">copie_names (obs_sequence.ObsSequence attribute)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.create_all_obs">create_all_obs() (obs_sequence.obs_sequence method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.create_all_obs">create_all_obs() (obs_sequence.ObsSequence method)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.create_header">create_header() (obs_sequence.obs_sequence method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.create_header">create_header() (obs_sequence.ObsSequence method)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.create_header_from_dataframe">create_header_from_dataframe() (obs_sequence.obs_sequence method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.create_header_from_dataframe">create_header_from_dataframe() (obs_sequence.ObsSequence method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -443,7 +443,7 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.df">df (obs_sequence.obs_sequence attribute)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.df">df (obs_sequence.ObsSequence attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -455,7 +455,7 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.generate_linked_list_pattern">generate_linked_list_pattern() (obs_sequence.obs_sequence static method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.generate_linked_list_pattern">generate_linked_list_pattern() (obs_sequence.ObsSequence static method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -467,13 +467,13 @@
 <h2 id="H">H</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.has_assimilation_info">has_assimilation_info() (obs_sequence.obs_sequence method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.has_assimilation_info">has_assimilation_info() (obs_sequence.ObsSequence method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.has_posterior">has_posterior() (obs_sequence.obs_sequence method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.has_posterior">has_posterior() (obs_sequence.ObsSequence method)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.header">header (obs_sequence.obs_sequence attribute)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.header">header (obs_sequence.ObsSequence attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -481,7 +481,7 @@
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.is_binary">is_binary() (obs_sequence.obs_sequence static method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.is_binary">is_binary() (obs_sequence.ObsSequence static method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -489,7 +489,7 @@
 <h2 id="J">J</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.join">join() (obs_sequence.obs_sequence class method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.join">join() (obs_sequence.ObsSequence class method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -499,13 +499,13 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/stats.html#stats.layer_statistics">layer_statistics() (in module stats)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.list_to_obs">list_to_obs() (obs_sequence.obs_sequence method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.list_to_obs">list_to_obs() (obs_sequence.ObsSequence method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/obs_sequence.html#obs_sequence.load_yaml_to_dict">load_yaml_to_dict() (in module obs_sequence)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.loc_mod">loc_mod (obs_sequence.obs_sequence attribute)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.loc_mod">loc_mod (obs_sequence.ObsSequence attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -541,17 +541,17 @@
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.n_copies">n_copies (obs_sequence.obs_sequence attribute)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.n_copies">n_copies (obs_sequence.ObsSequence attribute)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.n_non_qc">n_non_qc (obs_sequence.obs_sequence attribute)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.n_non_qc">n_non_qc (obs_sequence.ObsSequence attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.n_qc">n_qc (obs_sequence.obs_sequence attribute)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.n_qc">n_qc (obs_sequence.ObsSequence attribute)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.non_qc_copie_names">non_qc_copie_names (obs_sequence.obs_sequence attribute)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.non_qc_copie_names">non_qc_copie_names (obs_sequence.ObsSequence attribute)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.num_qc_non_qc">num_qc_non_qc() (obs_sequence.obs_sequence static method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.num_qc_non_qc">num_qc_non_qc() (obs_sequence.ObsSequence static method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -559,9 +559,9 @@
 <h2 id="O">O</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.obs_binary_reader">obs_binary_reader() (obs_sequence.obs_sequence method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.obs_binary_reader">obs_binary_reader() (obs_sequence.ObsSequence method)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.obs_reader">obs_reader() (obs_sequence.obs_sequence static method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.obs_reader">obs_reader() (obs_sequence.ObsSequence static method)</a>
 </li>
       <li>
     obs_sequence
@@ -572,9 +572,9 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence">obs_sequence (class in obs_sequence)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.obs_to_list">obs_to_list() (obs_sequence.ObsSequence method)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.obs_to_list">obs_to_list() (obs_sequence.obs_sequence method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence">ObsSequence (class in obs_sequence)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -619,7 +619,7 @@
 <h2 id="Q">Q</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.qc_copie_names">qc_copie_names (obs_sequence.obs_sequence attribute)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.qc_copie_names">qc_copie_names (obs_sequence.ObsSequence attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -627,15 +627,15 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.read_binary_header">read_binary_header() (obs_sequence.obs_sequence static method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.read_binary_header">read_binary_header() (obs_sequence.ObsSequence static method)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.read_header">read_header() (obs_sequence.obs_sequence static method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.read_header">read_header() (obs_sequence.ObsSequence static method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.read_record_length">read_record_length() (obs_sequence.obs_sequence static method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.read_record_length">read_record_length() (obs_sequence.ObsSequence static method)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.reverse_types">reverse_types (obs_sequence.obs_sequence attribute)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.reverse_types">reverse_types (obs_sequence.ObsSequence attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -645,9 +645,9 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/stats.html#stats.select_used_qcs">select_used_qcs() (in module stats)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.seq">seq (obs_sequence.obs_sequence attribute)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.seq">seq (obs_sequence.ObsSequence attribute)</a>
 </li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.split_metadata">split_metadata() (obs_sequence.obs_sequence static method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.split_metadata">split_metadata() (obs_sequence.ObsSequence static method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -658,7 +658,7 @@
         <li><a href="api/stats.html#module-0">module</a>
 </li>
       </ul></li>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.synonyms_for_obs">synonyms_for_obs (obs_sequence.obs_sequence attribute)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.synonyms_for_obs">synonyms_for_obs (obs_sequence.ObsSequence attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -670,7 +670,7 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.types">types (obs_sequence.obs_sequence attribute)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.types">types (obs_sequence.ObsSequence attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -678,7 +678,7 @@
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.update_types_dicts">update_types_dicts() (obs_sequence.obs_sequence static method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.update_types_dicts">update_types_dicts() (obs_sequence.ObsSequence static method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -686,7 +686,7 @@
 <h2 id="V">V</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.vert">vert (obs_sequence.obs_sequence attribute)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.vert">vert (obs_sequence.ObsSequence attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -694,7 +694,7 @@
 <h2 id="W">W</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/obs_sequence.html#obs_sequence.obs_sequence.write_obs_seq">write_obs_seq() (obs_sequence.obs_sequence method)</a>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.write_obs_seq">write_obs_seq() (obs_sequence.ObsSequence method)</a>
 </li>
   </ul></td>
 </tr></table>
