deploy: 5be4d01ff91fb762c044af788c0c7eb4649d2e3b

--- a/genindex.html
+++ b/genindex.html
@@ -678,6 +678,12 @@
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.update_attributes_from_df">update_attributes_from_df() (obs_sequence.ObsSequence method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.update_linked_list">update_linked_list() (obs_sequence.ObsSequence static method)</a>
+</li>
       <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.update_types_dicts">update_types_dicts() (obs_sequence.ObsSequence static method)</a>
 </li>
   </ul></td>
