deploy: 8370fd1352637cb34f103c1b621bb379742e7ddc

--- a/userguide/working-with-obsq.html
+++ b/userguide/working-with-obsq.html
@@ -540,14 +540,15 @@ forward operator mean and spread, and optionally the prior and posterior forward
 for each ensemble member.</p>
 <p>The line after the copies is the linked list information, which contains the previous observation number,
 the next observation number, a third number (-1) which is reserved for use in DART.</p>
-<p>The keyword <cite>obdef</cite> indicates the start of the observation definition. This is where any
-additional metadata for the observation is stored, for example a satellite observations may have
-channel, platform, and sensor information. In this example, the observation definition is empty.</p>
-<p>The keyword <cite>loc3d</cite> indicates the start of the 3D location of the observation, which is followed by
-the observation’s longitude, latitude in radians, and the vertical value and vertical coordinate
-(e.g. meters, pressure). The keyword <cite>kind</cite> indicates the type of observation, which is an integer that corresponds to the
+<p>The keyword <cite>obdef</cite> indicates the start of the observation definition.</p>
+<p>The next line, in this example, <cite>loc3d</cite> indicates a 3D or 1D location.
+For 3D observations the observation’s longitude, latitude in radians, and the vertical value and
+vertical coordinate (e.g. meters, pressure) is next. For 1D, location is a single number.
+The keyword <cite>kind</cite> indicates the type of observation, which is an integer that corresponds to the
 observation type (kind) defined in the header.  In this example, observation number 1 is a 16, which is
-a FLOAT_TEMPERATURE observation, and observation number 2 is 15 which is a FLOAT_SALINITY observation.</p>
+a FLOAT_TEMPERATURE observation, and observation number 2 is 15 which is a FLOAT_SALINITY observation.
+Any additional metadata for the observation is stored after the type, for example a satellite observations may have
+channel, platform, and sensor information. In this example, there is no extra metadata.</p>
 <p>The next line is observation time in <span style="color: orange;"> seconds</span>, <span style="color: orange;"> days</span> since a reference time (usually 1601 01 01 00:00:00 for DART),
 the last line of the observation is the observation error variance.</p>
 <section id="working-with-observation-sequence-objects">
