--- a/genindex.html
+++ b/genindex.html
@@ -631,11 +631,15 @@
 </li>
       <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.read_header">read_header() (obs_sequence.ObsSequence static method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.read_record_length">read_record_length() (obs_sequence.ObsSequence static method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.replace_qc2_nan">replace_qc2_nan() (obs_sequence.ObsSequence static method)</a>
+</li>
       <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.reverse_types">reverse_types (obs_sequence.ObsSequence attribute)</a>
+</li>
+      <li><a href="api/obs_sequence.html#obs_sequence.ObsSequence.revert_qc2_nan">revert_qc2_nan() (obs_sequence.ObsSequence static method)</a>
 </li>
   </ul></td>
 </tr></table>
